c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/incompatible_union_types/union_pointer_branch_mismatch.c
int main(void) {
    union u1;
    union u2;

    union u1 *ptr1 = 0;
    union u2 *ptr2 = 0;

    1 ? ptr1 : ptr2; // INVALID: different pointer types
    return 0;
}